[package]
name = "hello-dioxus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# if this fails to build, add the ayatana feature  
dioxus = { git = "https://github.com/DioxusLabs/dioxus.git", rev="cfd62e274e9f4c52d8e0bae7cd138aef7c0e54f3" }
dioxus-desktop = { git = "https://github.com/DioxusLabs/dioxus.git", rev="cfd62e274e9f4c52d8e0bae7cd138aef7c0e54f3" }
dioxus-html = { git = "https://github.com/DioxusLabs/dioxus.git", rev="cfd62e274e9f4c52d8e0bae7cd138aef7c0e54f3" }
tokio = { version = "1", features = ["full"] }


[build-dependencies]
glob = "0.3.0"
rsass = "0.26.0"