[package]
name = "messaging-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# if this fails to build, add the ayatana feature  
dioxus = "0.4"
dioxus-desktop = "0.4"
dioxus-html = "0.4"
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
# uuid = "1.4"


[build-dependencies]
glob = "0.3.0"
rsass = "0.26.0"